--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ironhack - Falppybird cuadritos</title>
+    <title>Ironhack - Falppy Bird con cuadritos</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     
-    <script src="/index.js"></script>
+
+    
+    <script src="/index.js"></script> 
+    <!--<script src="/exercise.js"></script> -->
 </body>
 </html>
