--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <canvas id="flappy" width="700" height="700"></canvas>
 
     
     <script src="/index.js"></script> 
     <!--<script src="/exercise.js"></script> -->
+    <!--<script src="/agregarimg.js"></script> -->
 </body>
 </html>
