--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <canvas id="flappy" width="700" height="700"></canvas>
+    <!--<canvas id="flappy" width="700" height="700"></canvas>-->
 
     
     <script src="/index.js"></script> 
